♻️ refactor: hoc 패턴 삭제

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,26 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>42Stat</title>
+    <meta
+      name="description"
+      content="42Stat은 42서울의 교육생들을 위한 통계 서비스입니다."
+    />
+    <meta property="og:url" content="https://stat.42seoul.kr" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="42Stat" />
+    <meta property="og:site_name" content="42Stat" />
+    <meta
+      property="og:description"
+      content="42Stat은 42서울의 교육생들을 위한 통계 서비스입니다."
+    />
+    <!-- TODO: og:image 추가 -->
+    <meta property="og:image" content="https://stat.42seoul.kr/og-image.png" />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="42Stat" />
+    <meta
+      property="twitter:description"
+      content="42Stat은 42서울의 교육생들을 위한 통계 서비스입니다."
+    />
   </head>
   <body>
     <div id="root"></div>
