--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,15 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-PJS9013S4V"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
+      if (document.location.hostname.search('stat.42seoul.kr') !== -1) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-      gtag('config', 'G-PJS9013S4V');
+        gtag('config', 'G-PJS9013S4V');
+      }
     </script>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
